stop wrapping on h3 to prevent separation of dropdown menu upon narrow width window

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -55,6 +55,7 @@ h4 {
     margin-bottom: 0;
     margin-left: 45px;
     padding-bottom: 6px;
+    white-space: nowrap;
 }
 
 .popover {
